// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and toggles open/closed 1`] = `
<div
  aria-label=""
  className="auth-error"
  role="alert"
  title=""
>
  <svg
    className="keeper-iconbutton-triangle-warning triangleWarning undefined"
    height={24}
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1 21H23L12 2L1 21ZM13 19H11V17H13V19ZM13 15H11V9H13V15Z"
      fill="#ff7361"
    />
  </svg>
  <div
    className="message keeper-outfit outfit-body-small"
  >
    Duo Push was denied.
  </div>
</div>
`;

exports[`renders and toggles open/closed 2`] = `
<div
  aria-label=""
  className="auth-error"
  role="alert"
  title=""
>
  <svg
    className="keeper-iconbutton-triangle-warning triangleWarning undefined"
    height={24}
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1 21H23L12 2L1 21ZM13 19H11V17H13V19ZM13 15H11V9H13V15Z"
      fill="#ff7361"
    />
  </svg>
  <div
    className="message keeper-outfit outfit-body-small"
  >
    Email address does not appear to be valid.
  </div>
</div>
`;

exports[`renders and toggles open/closed 3`] = `
<div
  aria-label=""
  className="auth-error"
  role="alert"
  title=""
>
  <svg
    className="keeper-iconbutton-triangle-warning triangleWarning undefined"
    height={24}
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1 21H23L12 2L1 21ZM13 19H11V17H13V19ZM13 15H11V9H13V15Z"
      fill="#ff7361"
    />
  </svg>
  <div
    className="message keeper-outfit outfit-body-small"
  >
    Do a generic test string
  </div>
</div>
`;
